Update AddressContainsKeywordsPredicate and NameContainsKeywordsPredicate
Update AddressContainsKeywordsPredicate and NameContainsKeywordsPredicate to return false when the keywords are empty.

Update FindClientCommandTest and FindClientCommandParserTest

Update FindClientCommandTest and FindClientCommandParserTest to work with all find parameters.